# DailyPaper

./: .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  DATA_SCHEMA.md  DEPLOYMENT.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_PHASE2.md  PROJECT_ANALYSIS.md  PROJECT_REVIEW.md  README.md  SMART_CFD_JOURNALS.md  config.yaml  fix_dates.py  index.html  papers.json  pyproject.toml  question.md  requirements.txt  simple_test.py
css/: style.css
daily_paper/: __init__.py  chinese_pipeline.py  classify.py  dates.py  enrich.py  http.py  merge.py  normalizer.py  pdf_enrich.py  queries.py  schema.py  storage.py  text.py
data/: 2012-10.json  2020-12.json  2021-08.json  2021-09.json  2022-02.json  2022-07.json  2022-08.json  2022-10.json  2022-12.json  2023-09.json  2024-05.json  2024-05.json.bak  2024-06.json  2024-06.json.bak  2024-08.json  2024-08.json.bak  2024-09.json  2024-09.json.bak  2024-10.json.bak  2024-11.json  2024-11.json.bak  2024-12.json  2025-01.json  2025-01.json.bak  2025-02.json  2025-02.json.bak  2025-03.json  2025-03.json.bak  2025-04.json  2025-04.json.bak  2025-05.json  2025-05.json.bak  2025-06.json  2025-06.json.bak  2025-07.json  2025-07.json.bak  2025-08.json  2025-09.json  2025-09.json.bak  2025-10.json  (+24 more)
docs/: DATA_SCHEMA.md  PROJECT_ANALYSIS.md  README.md  index.html  papers.json  push_test.txt
js/: data-loader.js.hash  filters.js  main.js  main.js.hash  paper-card.js  paper-card.js.hash  state.js  utils.js  utils.js.hash
scripts/: classifier.py  collect_chinese_papers.py  enrich.py  enrich_abstracts.py  enrich_metadata.py  export_to_zotero.py  (+13 more)
(+136 files in other folders)
