[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily_paper"
version = "0.1.0"
description = "自动化学术论文聚合工具（CFD+ML 方向）"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "arxiv>=2.1.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
    "scholarly>=1.7.0",
    "websocket-client>=1.8.0",
    "pyzotero>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["daily_paper*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "F",      # pyflakes: unused imports, undefined names
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF100", # unused noqa
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B011",   # assert False (used in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["daily_paper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
